laser1dir = $(pkgdatadir)/armes/laser1
laser1_DATA = laser1/arme laser1/arme.png laser1/destructArme laser1/explode1.png laser1/explode2.png laser1/explode3.png laser1/explode4.png laser1/explode5.png laser1/skinArme

missile1dir = $(pkgdatadir)/armes/missile1
missile1_DATA = missile1/arme missile1/arme.png missile1/destructArme missile1/explode1.png missile1/explode2.png missile1/explode3.png missile1/explode4.png missile1/explode5.png missile1/skinArme

EXTRA_DIST = $(laser1_DATA) $(missile1_DATA)
