asteroide1dir = $(pkgdatadir)/decors/asteroide1
asteroide1_DATA = asteroide1/ast1.bmp asteroide1/asteroide1.png asteroide1/explode1.png asteroide1/explode3.png asteroide1/explode5.png asteroide1/explode7.png asteroide1/explosion1 asteroide1/asteroide1 asteroide1/description asteroide1/explode2.png asteroide1/explode4.png asteroide1/explode6.png asteroide1/explode8.png

asteroide2dir = $(pkgdatadir)/decors/asteroide2
asteroide2_DATA = asteroide2/0001.png asteroide2/0003.png asteroide2/0005.png asteroide2/0007.png asteroide2/0009.png asteroide2/0011.png asteroide2/0013.png asteroide2/asteroide2 asteroide2/explode1.png asteroide2/explode3.png asteroide2/explosion2 asteroide2/0002.png asteroide2/0004.png asteroide2/0006.png asteroide2/0008.png asteroide2/0010.png asteroide2/0012.png asteroide2/0014.png asteroide2/description asteroide2/explode2.png asteroide2/explode4.png

bonus1dir = $(pkgdatadir)/decors/bonus1
bonus1_DATA = bonus1/bonus1 bonus1/bonus1-1.png bonus1/bonus1-2.png bonus1/bonus1-3.png bonus1/bonus1-4.png bonus1/bonus1-5.png bonus1/bonus1-6.png bonus1/bonus1-7.png bonus1/bonus1-8.png bonus1/bonus1.png bonus1/description

bonus2dir = $(pkgdatadir)/decors/bonus2
bonus2_DATA = bonus2/bonus2 bonus2/bonus2-10.png bonus2/bonus2-3.png bonus2/bonus2-5.png bonus2/bonus2-7.png bonus2/bonus2-9.png bonus2/bonus2-1.png bonus2/bonus2-2.png bonus2/bonus2-4.png bonus2/bonus2-6.png bonus2/bonus2-8.png bonus2/description

bonus3dir = $(pkgdatadir)/decors/bonus3
bonus3_DATA = bonus3/bonus3 bonus3/bonus3-1.png bonus3/bonus3-2.png bonus3/bonus3-3.png bonus3/description

ovni1dir = $(pkgdatadir)/decors/ovni1
ovni1_DATA = ovni1/description ovni1/explosion1 ovni1/ovni1 ovni1/ovni1.png ovni1/ovni10.png ovni1/ovni2.png ovni1/ovni3.png ovni1/ovni4.png ovni1/ovni5.png ovni1/ovni6.png ovni1/ovni7.png ovni1/ovni8.png ovni1/ovni9.png

ovni2dir = $(pkgdatadir)/decors/ovni2
ovni2_DATA = ovni2/description ovni2/explode11.png ovni2/explode14.png ovni2/explode2.png ovni2/explode5.png ovni2/explode8.png ovni2/feu3.gif ovni2/ovni11.png ovni2/ovni14.png ovni2/ovni2.png ovni2/ovni5.png ovni2/ovni8.png ovni2/explode1.png ovni2/explode12.png ovni2/explode15.png ovni2/explode3.png ovni2/explode6.png ovni2/explode9.png ovni2/ovni1.png ovni2/ovni12.png ovni2/ovni15.png ovni2/ovni3.png ovni2/ovni6.png ovni2/ovni9.png ovni2/explode10.png ovni2/explode13.png ovni2/explode16.png ovni2/explode4.png ovni2/explode7.png ovni2/explosion2 ovni2/ovni10.png ovni2/ovni13.png ovni2/ovni2 ovni2/ovni4.png ovni2/ovni7.png

tunnel1basdir = $(pkgdatadir)/decors/tunnel1bas
tunnel1bas_DATA = tunnel1bas/description tunnel1bas/explosion1 tunnel1bas/tunnel1bas tunnel1bas/tunnel1bas1.png tunnel1bas/tunnel1bas2.png tunnel1bas/tunnel1bas3.png

tunnel1hautdir= $(pkgdatadir)/decors/tunnel1haut
tunnel1haut_DATA = tunnel1haut/description tunnel1haut/explosion1 tunnel1haut/tunnel1haut tunnel1haut/tunnel1haut1.png tunnel1haut/tunnel1haut2.png tunnel1haut/tunnel1haut3.png

EXTRA_DIST = $(asteroide1_DATA) $(asteroide2_DATA) $(bonus1_DATA) $(bonus2_DATA) $(bonus3_DATA) $(ovni1_DATA) $(ovni2_DATA) $(tunnel1bas_DATA) $(tunnel1haut_DATA)
