AC_INIT(src/AlThreat.cc)

AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE(AlThreat, 0.3)

AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL

AC_CHECK_LIB([SDL], [SDL_Init],, AC_MSG_ERROR([SDL library needed for AlThreat! see http://www.libsdl.org/]))
AC_CHECK_LIB([SDL_image], [IMG_Load],, AC_MSG_ERROR([SDL_image library needed for AlThreat! see http://www.libsdl.org/]))
AC_CHECK_LIB([SDL_mixer], [Mix_LoadMUS],, AC_MSG_ERROR([SDL_mixer library needed for AlThreat! see http://www.libsdl.org/]))
AC_CHECK_LIB([SDL_ttf], [TTF_Init],, AC_MSG_ERROR([SDL_ttf library needed for AlThreat! see http://www.libsdl.org/]))

AC_OUTPUT(Makefile src/Makefile src/widgets/Makefile)
