vaisseauxdir = $(datadir)/vaisseaux
vaisseaux_DATA = vaisseaux.lst

Explorerdir = $(datadir)/vaisseaux/Explorer
Explorer_DATA = Explorer/Explorer Explorer/explorer-1.png Explorer/explorer.png Explorer/explosion Explorer/preview Explorer/proprietes

z95dir = $(datadir)/vaisseaux/z95
z95_DATA = z95/explosion z95/z95-1.png z95/z95-13.png z95/z95-17.png z95/z95-20.png z95/z95-24.png z95/z95-28.png z95/z95-31.png z95/z95-35.png z95/z95-7.png z95/preview z95/z95-10.png z95/z95-14.png z95/z95-18.png z95/z95-21.png z95/z95-25.png z95/z95-29.png z95/z95-32.png z95/z95-4.png z95/z95-8.png z95/proprietes z95/z95-11.png z95/z95-15.png z95/z95-19.png z95/z95-22.png z95/z95-26.png z95/z95-3.png z95/z95-33.png z95/z95-5.png z95/z95-9.png z95/z95 z95/z95-12.png z95/z95-16.png z95/z95-2.png z95/z95-23.png z95/z95-27.png z95/z95-30.png z95/z95-34.png z95/z95-6.png z95/z95.png

EXTRA_DIST = $(vaisseaux_DATA) $(Explorer_DATA) $(z95_DATA)
