noinst_LIBRARIES = libT3F_Widgets.a
libT3F_Widgets_a_SOURCES = bouton.cc checkbox.cc container.cc edit.cc focuscontainer.cc jauge.cc label.cc liste.cc menubutton.cc switch.cc view.cc widget.cc bouton.h checkbox.h constantes.h container.h edit.h focuscontainer.h jauge.h label.h liste.h menubutton.h switch.h view.h widget.h
